# mafia-seating-bot

./: .gitignore  README.md  commands.py  configuration.py  environment.yaml  game.py  helpers.py  main.py  makefile  metrics.py  optimize_opponents.py  optimize_seats.py  player.py  players.py  print.py  round.py  schedule.py  schedule_factory.py  setup.cfg  test_configuration.py  test_game.py  test_participants.py  test_player.py  test_players.py  test_schedule.py  test_schedule_factory.py  test_serialization.py
.github/workflows/: python-publish.yml  python-unittest.yml
config/: settings.yaml
src/: actions.py  all_configurations.py  commands.py  config_dir.py  configuration.py  game.py  interactive.py  main.py  metrics.py  optimize_opponents.py  rendezvouz.py
src/bot/: bot.py  init.py  utils.py
src/bot/handlers/: add_tournament.py  debug.py  info.py  nickname.py  show_tournament.py
src/bot/handlers/tournament/: __init__.py  add_tournament.py  common.py  configure_tournament.py  export_to_mwt.py  generate_seats.py  show_seats.py  (+4 more)
src/cli/: actions.py  all_configurations.py  commands.py  interactive.py
src/mafia_schedule/: __init__.py  configuration.py  format.py  game.py  helpers.py  metrics.py  optimize_opponents.py  optimize_seats.py  optimize_tables.py  output.py  player.py  print.py  progress.py  round.py  schedule.py  schedule_factory.py
test/: __init__.py  test_configuration.py  test_game.py  test_participants.py  test_player.py  test_schedule.py  test_schedule_factory.py  test_serialization.py
tests/: test_configuration.py  test_schedule.py
(+9 files in other folders)
