[metadata]
name = mafia-schedule
version = 0.0.2
author = Dmitry Bimatov
author_email = dbimatov@gmail.com
description = This is package to generate and work with schedules of mafia tournaments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dimtom/MafSchedule
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
